# watem-sedem

./: .gitignore  CLAUDE.md  MIGRATION_PLAN.md  pyproject.toml
.claude/agents/: plan.md  review.md
.claude/hooks/: session-start.sh  worktree-create.sh  worktree-remove.sh
.devcontainer/: CLAUDE.md  Dockerfile  devcontainer.json  host-devcontainer-rebuild.sh  host-vscode-tunnel.sh  post-create.sh  warmup-cache.sh
